# MfxHoudini

./: .gitignore  CMakeLists.txt  LICENSES  README.md  build-gcc.sh  build-mingw.bat  build-msvc15.bat  build-msvc16.bat
src/: CMakeLists.txt
src/plugins/: CMakeLists.txt  houdini_utils.c  houdini_utils.h  hruntime.c  hruntime.h  mfx_houdini_plugin.c
src/util/: CMakeLists.txt
src/util/include/util/: plugin_support.h
src/util/intern/: plugin_support.c
